feat: finalize payment process
