# src/main/webui/src/api/model/index.ts
@@ -6,5 +6,7 @@
  */
 
 export * from "./cooperateurDTO";
+export * from "./cooperateurStatus";
 export * from "./createCooperateurDTO";
 export * from "./genre";
+export * from "./postApiV1RegistrationsBody";
